# finacial-analysis-app

./: .gitignore  SECURITY.md
.devcontainer/: Dockerfile  devcontainer.json  postCreateCommand.sh
.github/: dependabot.yml
.github/workflows/: ci.yml  security.yml
app/backend/: .env.example  .flake8  manage.py  pyproject.toml  pytest.ini
app/backend/api/: admin.py  models.py  serializers.py  tests.py  tests_coverage.py  tests_edge_cases.py  urls.py  views.py
app/backend/api/analytics/: __init__.py  serializers.py  urls.py  views.py
app/backend/api/fixtures/: accounts.json  categories.json  import_logs.json  institutions.json  transactions.json
app/backend/api/importers/: __init__.py  bank_1.py  bank_5.py  base.py
app/backend/api/management/commands/: import_transactions.py
app/backend/api/migrations/: 0001_initial.py
app/backend/api/utils/: date_helpers.py  formatters.py
app/backend/financial_analysis/: asgi.py  settings.py  urls.py  wsgi.py
app/backend/scripts/: setup_dev_data.sh
app/backend/tests/: README.md  __init__.py  conftest.py
app/backend/tests/fixtures/: factory.py
app/backend/tests/integration/: test_endpoints.py
app/backend/tests/unit/: test_models.py
app/frontend/: .prettierignore  README.md  SETUP.md  index.html  package-lock.json  package.json  vite.config.ts  vitest.config.ts
docs/: CHANGELOG.md  CONTRIBUTING.md  INDEX.md  LICENSE  README.md
docs/architecture/: DATABASE_SCHEMA.md  SYSTEM_DESIGN.md
docs/deployment/: DEPLOYMENT.md
docs/development/: CI_CD.md  DEVCONTAINER_GUIDE.md  DEVELOPER_GUIDE.md  TESTING.md
(+40 files in other folders)
